frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
$backfill-height: 30px;
$avatar-size: 36px;

.userBox {
	background-color: var(--color-primary-background);
	border: 1px solid var(--color-gray-300);
	border-radius: var(--border-radius);
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	max-width: var(--right-panel-width);
	position: relative;

	&.backfillShown {
		padding-top: $backfill-height;
	}
}

.backfillContainer {
	background-color: var(--color-gray-600);
	border-radius: var(--border-radius) var(--border-radius) 0 0;
	height: $backfill-height;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
}

.backfillContent {
	align-items: center;
	color: var(--color-white);
	display: flex;
	font-size: 12px;
	height: $backfill-height;
	justify-content: center;
}

.backfillUserIcon {
	align-items: center;
	display: flex;
	margin: 0 4px;

	svg {
		width: 18px;
	}
}

.backfillInfoIcon {
	cursor: pointer;

	svg {
		font-size: 14px;
	}
}

.avatar {
	height: $avatar-size;
	width: $avatar-size;
}

#enhancedName {
	align-items: center;
	display: flex;
	font-weight: 400 !important;
	margin-bottom: 0 !important;
}

.enhancedBio {
	color: var(--color-gray-500);
	display: flex;
	font-size: 12px;
	font-weight: 300;
	-webkit-line-clamp: 9; /* number of lines to show */
	line-height: 16px; /* fallback */
	margin-bottom: 4px !important;
	margin-top: 0 !important;
	max-height: 144px; /* fallback */
	overflow: hidden;
	text-overflow: ellipsis;
	word-break: break-word;
}

.enhancedTextSection {
	display: flex;
	flex-direction: column;
	padding-left: calc($avatar-size + var(--size-small));
	row-gap: var(--size-small);
}

.userEnhanced {
	padding: var(--size-medium);
	position: relative;
}

.userEnhancedGrid {
	column-gap: 14px;
	display: grid;
	grid-template-columns: fit-content(20px) auto;
	padding: 16px 28px;
	position: relative;
}

.enhancedSocial {
	align-items: center;
	color: var(--color-gray-500) !important;
	column-gap: 6px;
	display: flex;
}

.enhancedSocialText {
	color: var(--text-primary) !important;
	font-size: 12px;
	margin: 0 !important;
}

.userMainSection {
	border-bottom: 1px solid var(--color-gray-300);
	box-sizing: border-box;
	display: flex;
	flex-direction: row;
	padding: var(--size-medium);
}

.userDetailsSection {
	display: flex;
	padding-bottom: var(--size-medium);
	padding-left: 22px;
	padding-right: 22px;
	padding-top: var(--size-medium);
}

.userAvatarWrapper {
	align-items: flex-start;
	display: flex;
	justify-content: center;
}

.socialIcons {
	align-items: center;
	display: flex;
	margin-top: 8px;
}

.socialIcon {
	fill: var(--color-gray-400);
	height: 20px;
	margin-right: 6px;
	width: 20px;
}

.skeletonWrapper {
	display: flex;
	flex-direction: row;
	padding: 10px 30px 0;
	width: var(--right-panel-width);
}

.avatarWrapper {
	display: flex;
	height: 100%;
	justify-content: center;
	margin-right: 10px;
}

.headerWrapper {
	display: flex;
	flex-direction: column;
	font-weight: 400;
	max-width: calc(
		var(--right-panel-width) - $avatar-size - 2 * var(--size-medium)
	);
	padding-left: var(--size-small);
	row-gap: var(--size-xxSmall);
	width: 100%;
}

.userText {
	display: block;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: 100%;
}

.userIdHeader {
	align-items: center;
	color: var(--text-primary);
	display: flex;
	flex-wrap: nowrap;
	font-size: 14px;
	font-weight: 300;
	margin: 0;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: 100%;
}

.userIdSubHeader {
	color: var(--color-gray-500);
	display: block;
	font-size: 12px;
	line-height: 17px;
	margin: 0 !important;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: 100%;
}

.userInfoWrapper {
	color: var(--color-gray-500);
	font-size: 13px;
	padding-right: 25px;
	width: 100%;
}

.userProfile {
	background-color: var(--color-gray-200);
	border-radius: 50%;
	height: 60px;
	width: 60px;
}

.tagEllipsis {
	display: block;
	max-width: 160px;
	overflow: hidden;
	text-overflow: ellipsis;
}

.expandArrow {
	cursor: pointer;
	flex: 0 0 16px;
	margin-top: 4px;
	opacity: 0.7;
	transition: 0.2s;
}

.starIconWrapper {
	flex-shrink: 0;
	height: var(--size-medium) !important;
	margin-left: auto;
	width: var(--size-medium) !important;

	&:hover {
		cursor: pointer;
	}
}

.starredIcon {
	color: var(--color-yellow-300);
	fill: var(--color-yellow-300);
	stroke: var(--color-yellow-300);
}

.unstarredIcon {
	fill: var(--color-gray-500);
}

.deviceDetails {
	align-items: center;
	column-gap: 6px;
	display: flex;
}

.userIdentifier {
	margin-top: 0;
}

.viewAllSessionsButton {
	color: var(--color-purple) !important;
	display: flex;
	font-size: var(--size-small);
	gap: var(--size-xxSmall);
	max-width: min-content;
	padding: 0;
	span {
		display: block;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

.tooltip {
	color: var(--color-gray-500);
	display: flex;
	margin-left: auto;
}

.blurred {
	filter: blur(4px);
}

.enhancedLinksGrid {
	display: grid;
	grid-auto-rows: 20px;
	grid-template-columns: 1fr 1fr;
}

.enableClearbit {
	padding: var(--size-medium) 22px;
}

